Added weeks 5, 6, 7 and 8